<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="about"
    android:persistent="false"
    android:title="@string/preference_about_app">

    <PreferenceCategory android:title="@string/preferences_category_about">

        <Preference
            android:key="author"
            android:summary="@string/author_name"
            android:title="@string/preference_author">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/authors_url" />

        </Preference>

        <Preference
            android:key="version"
            android:title="@string/preference_version_number" />

        <Preference
            android:key="licences"
            android:title="@string/preference_open_source_licences" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preferences_category_special_thanks">

        <Preference
            android:key="author"
            android:summary="@string/preference_samuels_graphics_desc"
            android:title="@string/preference_samuels_graphics">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/samuels_graphics_url" />

        </Preference>

    </PreferenceCategory>

</PreferenceScreen>
