<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="about"
    android:persistent="false"
    android:title="@string/preference_about_app">

    <android.support.v7.preference.PreferenceCategory android:title="@string/preferences_category_about">

        <android.support.v7.preference.Preference
            android:key="author"
            android:summary="@string/author_name"
            android:title="@string/preference_author">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/authors_url" />

        </android.support.v7.preference.Preference>

        <android.support.v7.preference.Preference
            android:key="version"
            android:title="@string/preference_version_number" />

        <android.support.v7.preference.Preference
            android:key="licences"
            android:title="@string/preference_open_source_licences" />

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory android:title="@string/preferences_category_special_thanks">

        <android.support.v7.preference.Preference
            android:key="author"
            android:summary="@string/preference_samuels_graphics_desc"
            android:title="@string/preference_samuels_graphics">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/samuels_graphics_url" />

        </android.support.v7.preference.Preference>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
